2004-10-17  0.8.1.39  Roland Clobus <rclobus@bigfoot.com>
	* common/map.h, common/map_query.c: Fixed longest road detection
	* client/gtk/monopoly.c: No longer uses deprecated calls. Removed
	frame
	* client/callback.h, client/common/build.c, client/common/client.h,
	client/common/resource.c, client/common/setup.c,
	client/gtk/frontend.h, client/gtk/gui.c, client/gtk/guimap.c,
	client/gtk/guimap.h, client/gtk/interface.c, common/buildrec.c,
	common/buildrec.h, common/map.h, common/map_query.c: Many pointers are
	now const
	* client/common/robber.c: Removed unused code
	* client/gtk/frontend.c, client/gtk/gameover.c, client/gtk/resource.c:
	Replaced deprecated calls
	* client/gtk/gui.c, client/gtk/guimap.c, client/gtk/guimap.h: Single
	click building
	* common/log.c, common/log.h, common/gtk/common_gtk.c,
	common/gtk/common_gtk.h: Log uses less memory
	* server/player.c: Fix for lost longest road on reconnect

2004-10-08  0.8.1.38  Roland Clobus <rclobus@bigfoot.com>
	* All *.c: Added #include "config.h"
	* configure.in, ai/ai.c, client/ai/ai.c, client/gtk/connect.c,
	client/gtk/offline.c, common/Makefile.am,
	meta-server/gnocatan-meta-server.c, server/gnocatan-server-console.c,
	server/gnocatan-server.c, server/gtk/gnocatan-server-gtk.c,
	server/meta.c, server/server.c: Moved contents of meta.h and port
	numbers to configure.in
	* common/meta.h: Replaced by contents in configure.in
	* client/callback.h, client/common/i18n.c, client/gtk/offline.c: Added
	commandline to gnocatan client
	* rules.make, client/common/resource.c, client/gtk/callbacks.c,
	client/gtk/gui.c, client/gtk/guimap.c, client/gtk/histogram.c,
	client/gtk/player.c, client/gtk/trade.c, common/game.c,
	common/network.c: Added -pedantic to --enable-debug, and resolving
	many warnings
	* client/gtk/develop.c, client/gtk/connect.c, client/gtk/discard.c,
	client/gtk/frontend.c, client/gtk/gameover.c, client/gtk/gold.c,
	client/gtk/monopoly.c, client/gtk/plenty.c, client/gtk/polygon.c,