@@ -1,3 +1,7 @@
+2004-10-24  0.8.1.40  Roland Clobus <rclobus@bigfoot.com>
+	* client/gtk/gui.c, client/gtk/gui.h, client/gtk/trade.c: Removed the
+	second global variable map. (The other is client/common/client.[ch])
+
 2004-10-17  0.8.1.39  Roland Clobus <rclobus@bigfoot.com>
 	* common/map.h, common/map_query.c: Fixed longest road detection
 	* client/gtk/monopoly.c: No longer uses deprecated calls. Removed
